--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Values.labels.app }}
+  name: {{ .Values.name }}-ing
   namespace: {{ .Values.namespace }}
 annotations:
     ingress.kubernetes.io/ssl-redirect: "false"
@@ -16,7 +16,7 @@ spec:
       paths:
       - backend:
           service:
-            name: {{ .Values.labels.app }}
+            name: {{ .Values.name }}-svc
             port:
               number: 80
         path: /
