add fix for ingress

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -9,7 +9,7 @@ spec:
   replicas: {{ .Values.deployment.replicas }}
   selector:
     matchLabels:
-      {{ .Values.labels.app }}
+      app: {{ .Values.labels.app }}
   template:
     metadata:
       labels:
